<resources>
    <string name="app_name">CheckY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">logout</string>
    <string name="log_out">로그아웃</string>

    <!--    <string name="menu_home">Checky</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->

    // Custom menu
    <string name="menu_inform">내 정보 관리</string>
    <string name="menu_checkin">출석체크</string>
    <string name="menu_cyber">사이버 캠퍼스</string>
    <string name="menu_jongjung">종합 정보 서비스</string>
    <string name="menu_timetable">강의시간표</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"환영합니다."</string>
    <string name="invalid_username">ID를 다시 확인해주세요.</string>
    <string name="invalid_password">PassWord를 다시 확인해주세요.</string>
    <string name="login_failed">"Login failed"</string>
</resources>