<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_checkin">

    <fragment
            android:id="@+id/nav_checkin"
            android:name="com.example.nfcdemo.ui.checkin.CheckinFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_checkin"/>

    <fragment
            android:id="@+id/nav_inform"
            android:name="com.example.nfcdemo.ui.inform.InformFragment"
            android:label="@string/menu_inform"
            tools:layout="@layout/fragment_inform"/>

    <fragment
            android:id="@+id/nav_cyber"
            android:name="com.example.nfcdemo.ui.cyber.CyberFragment"
            android:label="@string/menu_cyber"
            tools:layout="@layout/fragment_cyber"/>

    <fragment
            android:id="@+id/nav_jongjung"
            android:name="com.example.nfcdemo.ui.jongjung.JongjungFragment"
            android:label="@string/menu_jongjung"
            tools:layout="@layout/fragment_jongjung"/>

    <fragment
            android:id="@+id/nav_timetable"
            android:name="com.example.nfcdemo.ui.timetable.TimetableFragment"
            android:label="@string/menu_timetable"
            tools:layout="@layout/fragment_timetable"/>
</navigation>